# solidity

docs/examples/: modular.rst
test/libsolidity/: SemanticTest.cpp
test/libsolidity/semanticTests/: smoke_test.sol  smoke_test_multiline_comments.sol
test/libsolidity/util/: TestFileParser.cpp  TestFileParser.h  TestFileParserTests.cpp
test/tools/: isoltest.cpp
test/tools/ossfuzz/: CMakeLists.txt  strictasm_assembly_ossfuzz.cpp  strictasm_opt_ossfuzz.cpp
